# flashlight

./: Cargo.toml  LICENSE_MIT  README.md  backprop_explanation.txt  backprop_on_gpu.txt  backprop_weights_on_gpu.txt
.github/workflows/: rust.yml
examples/: larger_than_cpu.rs  larger_than_gpu.rs  similar_forward.rs
src/: flashlight_model.rs  flashlight_neural_network.rs  lib.rs  main.rs  model.rs  prelude.rs
src/input_handler/: mod.rs
src/layers/: dropout.rs  linear.rs  mod.rs
src/layers/activations/: relu.rs  sigmoid.rs
src/math/: derivatives.rs  matrix.rs  mod.rs  propagation.rs  sigmoid.rs  tensor.rs
src/math/matrix/: mod.rs
src/qol/: display.rs
